--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,146 @@
 /* MAIN 
 ======================== */
 body {
+  font-size: 1.2em;
   font-family: "Open Sans", sans-serif;
+}
+
+.flexbox {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
+.blue {
+  color: #6ecbdc;
+}
+
+.green {
+  color: #63c278;
+}
+
+.orange {
+  color: #ffc483;
+}
+
+.red {
+  color: #ff6c5d;
+}
+
+.purple {
+  color: #9f7fff;
 }
 
 /* HEADER 
 ======================== */
+/* SIDEBAR 
+======================== */
+.user {
+  padding: 15px 20px;
+}
+.user .options {
+  justify-content: space-between;
+  font-size: 1.4em;
+}
+.user .options a {
+  color: #c0c7d2;
+}
+.user .profile {
+  margin-top: 15px;
+  text-align: center;
+}
+.user .profile img {
+  width: 100px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+}
+.user .profile strong {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  display: block;
+  font-size: 1.5em;
+}
+.user .profile p {
+  color: #c0c7d2;
+}
+
+.search {
+  padding: 5px 20px;
+}
+
+.menu {
+  margin-top: 20px;
+  border: 1px solid #000;
+}
+.menu a {
+  color: #565055;
+  display: block;
+  text-decoration: none;
+  padding: 15px 15px;
+}
+.menu ul {
+  margin: 0;
+  padding: 5px 20px;
+  list-style-type: none;
+}
+.menu ul li {
+  font-size: 1.2em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.menu ul li i {
+  margin-right: 10px;
+}
+.menu ul li:hover {
+  background: #63c278;
+}
+.menu ul li:hover a, .menu ul li:hover i {
+  color: #fff;
+}
+.menu ul li:first-child:hover {
+  background: none;
+}
+.menu ul li:first-child:hover a, .menu ul li:first-child:hover i {
+  color: #6ecbdc;
+}
+
 /* CONTENT 
 ======================== */
+.sidebar {
+  position: fixed;
+  background: #ffffff;
+  height: 100%;
+  width: 20%;
+  border-right: 1px solid #c0c7d2;
+}
+
+.content {
+  background: #ffffff;
+  margin-left: 20%;
+  width: 80%;
+  border: 1px solid red;
+}
+
 /* FOOTER 
 ======================== */
 /* RESPONSIVE 
