todo-list layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,31 @@ body {
   color: #9f7fff;
 }
 
+.bg-blue {
+  color: #fff;
+  background: #6ecbdc;
+}
+
+.bg-green {
+  color: #fff;
+  background: #63c278;
+}
+
+.bg-orange {
+  color: #fff;
+  background: #ffc483;
+}
+
+.bg-red {
+  color: #fff;
+  background: #ff6c5d;
+}
+
+.bg-purple {
+  color: #fff;
+  background: #9f7fff;
+}
+
 .green-btn {
   background: #63c278;
   color: #fff;
@@ -190,6 +215,72 @@ header .logs ul li:first-child i {
   background: #ffffff;
   margin-left: 20%;
   width: 80%;
+}
+
+.list {
+  width: 80%;
+}
+.list .todo-list {
+  padding: 0;
+  margin: 0;
+}
+.list .todo-list li {
+  padding: 20px 10px;
+  border-bottom: 1px solid #f7f7f7;
+  justify-content: space-between;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.list .todo-list li .single-task {
+  width: 80%;
+}
+.list .todo-list li .single-task img {
+  margin-right: 20px;
+  float: left;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  width: 60px;
+}
+.list .todo-list li .single-task p {
+  margin-top: 2px;
+}
+.list .todo-list li .single-task strong {
+  font-size: 1.2em;
+}
+.list .todo-list li .single-task span {
+  display: block;
+  color: #8c98a8;
+  font-weight: 300;
+}
+.list .todo-list li .single-task label {
+  padding: 5px 10px;
+  margin-left: 10px;
+  text-transform: uppercase;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+}
+.list .todo-list li .checker {
+  align-self: center;
+}
+.list .todo-list li .checker input {
+  font-size: 8em;
+}
+.list .todo-list li:hover {
+  background: #f2f3f5;
+}
+
+.members {
+  border: 1px solid lime;
+  width: 20%;
 }
 
 /* FOOTER 
