--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -66,6 +66,12 @@ body{
 .red		{color:$red;}
 .purple 	{color:$purple;}
 
+.bg-blue 	{color: #fff; background: $blue;}
+.bg-green 	{color: #fff; background: $green;}
+.bg-orange 	{color: #fff; background: $orange;}
+.bg-red 	{color: #fff; background: $red;}
+.bg-purple 	{color: #fff; background: $purple;}
+
 .green-btn{
 	background: $green;
 	color: #fff;
@@ -201,6 +207,64 @@ header{
 	background: $bg;
 	margin-left: 20%;
 	width: 80%;
+}
+.list{
+	width: 80%;
+
+	.todo-list{
+		padding: 0;
+		margin: 0;
+
+		li{
+			padding: 20px 10px;
+			border-bottom: 1px solid $stripe;
+			justify-content: space-between;
+			@include transition(0.4s);
+
+			.single-task{
+				width: 80%;
+
+				img{
+					margin-right: 20px;
+					float: left;
+					@include border-radius(50%);
+					width: 60px;
+				}
+				p{
+					margin-top: 2px;
+				}
+				strong{
+					font-size: 1.2em;
+				}
+				span{
+					display: block;
+					color: $grey;
+					font-weight: 300;
+				}
+				label{
+					padding: 5px 10px;
+					margin-left: 10px;
+					text-transform: uppercase;
+					@include border-radius(5px);
+				}
+			}
+			.checker{
+				align-self: center;
+				
+				input{
+					font-size: 8em;
+				}
+			}
+
+			&:hover{
+				background: lighten($grey, 35%);
+			}
+		}
+	}
+}
+.members{
+	border: 1px solid lime;
+	width: 20%;
 }
 
 /* FOOTER 
