--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -263,8 +263,39 @@ header{
 	}
 }
 .members{
-	border: 1px solid lime;
-	width: 20%;
+	border-left: 1px solid $stripe;
+	width: 16%;
+	position: fixed;
+	height: 100%;
+	padding-top: 20px;
+
+	ul{
+		margin-top: 15px;
+		list-style-type: none;
+		padding: 0;
+
+		li{
+			padding: 10px 15px;
+			@extend .flexbox;
+			justify-content: space-between;
+		}
+		img{
+			width: 50px;
+			height: 50px;
+			@include border-radius(50%);
+		}
+		p{
+			padding-top: 5px;
+		}
+		strong{
+			display: block;
+		}
+		a{
+			padding-top: 12px;
+			font-size: 1.3em;
+			color: $grey;
+		}
+	}
 }
 
 /* FOOTER 
