--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -297,6 +297,37 @@ header{
 		}
 	}
 }
+.login-title{
+	margin-top: 100px;
+	text-align: center;
+}
+.login{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	@include translate(-50%,-50%);
+	width: 30%;
+	text-align: center;
+	
+
+	h2{
+		margin-bottom: 35px;
+	}
+
+	.login-form{
+		.input-group{
+			margin-bottom: 10px;
+		}
+		input{
+			border-radius: 0 !important;
+		}
+		a{
+			margin-top: 5px;
+			color: $blue;
+			float: left;
+		}
+	}
+}
 
 /* FOOTER 
 ======================== */
