--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -328,6 +328,14 @@ header{
 		}
 	}
 }
+.edit{	
+	padding: 30px 50px;
+	width: 100%;
+
+	h2{
+		margin-bottom: 50px;
+	}
+}
 
 /* FOOTER 
 ======================== */
