--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -285,10 +285,15 @@ header{
 			@include border-radius(50%);
 		}
 		p{
+			width: 60%;
 			padding-top: 5px;
 		}
 		strong{
 			display: block;
+		}
+		span{
+			color: $grey;
+			font-style: italic;
 		}
 		a{
 			padding-top: 12px;
