--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,36 @@ header .logs ul li:first-child i {
   width: 60%;
 }
 
+.comments {
+  padding: 25px 50px;
+  flex-direction: column;
+}
+.comments form {
+  width: 60%;
+}
+.comments form textarea {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.comments .reaction-list {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 20px;
+  width: 60%;
+}
+.comments .reaction-list li {
+  padding: 10px 0;
+  border-bottom: 1px solid #dedede;
+}
+.comments .reaction-list li p {
+  color: #8c98a8;
+  font-size: 1.1em;
+  margin: 0;
+}
+.comments .reaction-list li:last-child {
+  border-bottom: 0;
+}
+
 /* FOOTER 
 ======================== */
 /* RESPONSIVE 
