--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,14 @@ header .logs ul li:first-child i {
   height: 100%;
   padding-top: 20px;
 }
+.members .view_all {
+  display: block;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #6ecbdc;
+  font-size: 1.1em;
+}
 .members ul {
   margin-top: 15px;
   list-style-type: none;
@@ -322,6 +330,32 @@ header .logs ul li:first-child i {
   padding-top: 12px;
   font-size: 1.3em;
   color: #8c98a8;
+}
+
+.member-list {
+  padding: 50px;
+}
+.member-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+.member-list ul li {
+  margin-bottom: 10px;
+}
+.member-list ul li img {
+  margin-right: 10px;
+}
+.member-list ul li strong {
+  font-size: 1.2em;
+  display: block;
+}
+.member-list ul li span {
+  color: #8c98a8;
+  display: block;
+}
+.member-list ul li select {
+  margin-top: 10px;
+  width: 150px;
 }
 
 .login-title {
