--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -383,6 +383,10 @@ header{
 		margin-bottom: 50px;
 	}
 
+	input[type="file"]{
+		padding: 8px 15px;
+	}
+
 	.remove-list{
 		list-style-type: none;
 		padding: 0;
