--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -60,11 +60,11 @@ body{
 	flex-direction: row;
 }
 
-.blue 		{color:$blue;}
-.green 		{color:$green;}
-.orange		{color: $orange;}
-.red		{color:$red;}
-.purple 	{color:$purple;}
+.blue 		{color:$blue !important;}
+.green 		{color:$green !important;}
+.orange		{color: $orange !important;}
+.red		{color:$red !important;}
+.purple 	{color:$purple !important;}
 
 .bg-blue 	{color: #fff; background: $blue;}
 .bg-green 	{color: #fff; background: $green;}
@@ -76,6 +76,26 @@ body{
 	background: $green;
 	color: #fff;
 }
+
+.err-message{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	padding: 20px 50px;
+	z-index: 99;
+	background: $red;
+	color: #fff;
+}
+.suc-message{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	padding: 20px 50px;
+	z-index: 99;
+	background: $green;
+	color: #fff;	
+}
+
 
 /* HEADER 
 ======================== */
@@ -161,7 +181,31 @@ header{
 }
 
 .search 		{padding: 5px 20px;}
-
+.home-avatar{
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	@include border-radius(50%);
+	background-size: cover !important;
+	background-position: top center !important;
+}
+.prof-picture{
+	margin-right: 15px;
+	width: 125px;
+	height: 125px;
+	background-size: cover !important;
+	background-position: top center !important;
+}
+.thumb-avatar{
+	width: 60px;
+	height: 60px;
+	diplay: inline-block;
+	margin-right: 20px;
+	float: left;
+	@include border-radius(50%);
+	background-size: cover !important;
+	background-position: top center !important;
+}
 .menu{
 	margin-top: 20px;
 
@@ -525,6 +569,38 @@ header{
 
 	.checker{
 		padding-top: 15px;
+	}
+}
+
+.pub-user{
+	border: 1px solid red;
+
+	.public-lists{
+		margin-left: 50px;
+		list-style-type: none;
+		padding: 0;
+		width: 40%;
+		
+		li{
+			position: relative;
+			display: block;
+			padding: 10px 30px;
+			background: lighten($grey, 30%);
+			border: 1px solid lighten($grey, 20%);
+		}
+
+		h5{
+			font-weight: 700;
+		}
+		.nfollow{
+			position: absolute;
+			display: inline-block;
+			top: 30px;
+			right: 20px;
+			padding: 5px 10px;
+			font-style: italic;
+			color: $grey;
+		}
 	}
 }
 
